# Proyecto-1-FDD

./: .dockerignore  .gitignore  Dockerfile  README.md  cfdi_output.json  cfdi_pandas_tutorial.ipynb  pyproject.toml  test.py
.github/workflows/: ci.yml
cfdi_pandas/: __init__.py  analysis.py  exchange.py  parser.py  plots.py  reader.py  validate.py
cfdis_test/: 3bc6cb87-8afd-4d82-8834-4ce31207183b.xml  3f7bbc74-de9d-4aaa-9b44-3406876da78c.xml  5751cdc3-937c-42a6-a188-1deebb1efb6d.xml  5d607f8f-d6f2-46a0-9526-e4f67ab8fc21.xml  6840a85d-6ea2-470d-bab7-a24dc831728a.xml  8ccd2f52-d3ab-4872-b031-0b005dce2f57.xml  9d053414-f3ad-461e-837b-a972999d008b.xml  bd6b83e6-e28f-4115-9680-a4426f1b0a8f.xml  be30fd20-cb09-4a2d-9ab0-6270b1e711f7.xml  c1a85402-0117-4fe6-86c9-bbe0a8663f5f.xml  d3f35ea4-9aea-42ce-bfef-2b50637566ef.xml  d8138f27-d6e4-4aaa-8ef8-fab418f66f53.xml  ff2a2d48-5484-4696-8032-087e0a625eee.xml
scripts/: docker_example.sh  docker_notebook.sh
tests/: conftest.py  test_analysis.py  test_exchange.py  test_parser.py  test_plots.py  test_reader.py  test_validate.py
